# toolforge

./: .gitignore  README.md  STATUS.md  config.yaml  pyproject.toml
docs/: architecture-guide.md
docs/bug-fixes/: 2026-06-21-verification-fixes.md
docs/superpowers/plans/: 2026-05-31-toolforge-phase-1.md
docs/superpowers/specs/: 2026-05-31-toolforge-design.md
sandbox/: Dockerfile
tests/: conftest.py
tests/test_integration/: test_full_loop.py
tests/test_llm/: test_deepseek.py
tests/test_master/: test_agent.py  test_planner.py  test_tool_sensor.py
tests/test_registry/: test_db_store.py  test_file_store.py  test_registry.py  test_vector_store.py
tests/test_sandbox/: test_docker_manager.py
tests/test_security/: test_malicious_code.py
tests/test_smith/: test_code_generator.py  test_smith.py  test_static_checker.py  test_template_engine.py
toolforge/: __init__.py  cli.py  config.py  exceptions.py
toolforge/llm/: base.py  deepseek.py
toolforge/master/: agent.py  planner.py  tool_sensor.py
toolforge/registry/: db_store.py  file_store.py  models.py  registry.py  vector_store.py
toolforge/sandbox/: docker_manager.py  image_builder.py
toolforge/smith/: code_generator.py  models.py  smith.py  static_checker.py  template_engine.py
toolforge/templates/api_caller/: template.yaml  test_template.py  tool_template.py
toolforge/templates/calculator/: template.yaml  test_template.py  tool_template.py
toolforge/templates/data_extractor/: template.yaml  test_template.py  tool_template.py
toolforge/templates/data_transformer/: template.yaml  (+2 more)
(+18 files in other folders)
