[project]
name = "toolforge"
version = "0.1.0"
description = "自进化工具 AI Agent 框架"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "chromadb>=0.5",
    "docker>=7.0",
    "jinja2>=3.1",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
